@@ -23,6 +23,8 @@
 <ul>
  <li> skalibs dependency bumped to 2.5.0.1. </li>
  <li> execline dependency bumped to 2.3.0.1. </li>
+ <li> <a href="s6-ftrig-listen1.html">s6-ftrig-listen1</a> prints the last event
+it received to stdout. </li>
 </ul>
 
 <h2> in 2.5.0.0 </h2>
