@@ -4,6 +4,9 @@ In 2.5.0.1
 ----------
 
  - Bugfix release.
+ - s6-ftrig-listen1 now prints to stdout the last event (the last
+byte) it received and made it match the regexp it was given.
+This is a bugfix. :)
 
 
 In 2.5.0.0
